Bugfix #824 Hidden Scrollbar
git-svn-id: svn://cherokee-project.com/CTK/trunk@5160 5dc97367-97f1-0310-9951-d761b3857238

--- a/static/css/CTK.css
+++ b/static/css/CTK.css
@@ -673,20 +673,16 @@ tr.panel-selected td div.row_content .sel-actions {
 #body-advanced .dialog-warning { width: 240px; margin-left: 640px; margin-top: 48px; position: absolute; }
 
 /* Page general */
-#Network-1,
-#Ports_to_listen-2,
-#Permissions-3,
-#Icons-4
-{
+#body-general .ui-tabs-panel {
  overflow: auto;
  overflow-x: hidden;
 }
 
-#Mime_types-5 h2 {
+.mime_types h2 {
  border: none;
 }
 
-#Mime_types-5 .button {
+.mime_types .button {
  float: right;
 }
 
